Docs: add documentation for Show Openings
