# handler/response.go
@@ -39,3 +39,9 @@ type DeleteOpeningResponse struct {
 	Data    schemas.OpeningResponse `json:"data"`
 }
 
+type ShowOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+
